# struct2json

./: .gitignore  CMakeLists.txt  LICENSE  README.md  json_marshall_demo.c
demo/: main.c
demo/example_cases/: struct_with_number.c  struct_with_number.h  struct_with_string.c  struct_with_string.h  struct_with_struct.c  struct_with_struct.h
include/: struct2json.h  util_vector.h
source/: struct2json.c  util_vector.c
